ftpd.8: Fix a documentation typo

--- a/ftpd.8
+++ b/ftpd.8
@@ -97,7 +97,7 @@ With this option set,
 sends authentication success and failure messages to the
 .Xr blacklistd 8
 daemon.
-If this option is not specified, no communcation with the
+If this option is not specified, no communication with the
 .Xr blacklistd 8
 daemon is attempted.
 .It Fl D
